# templatebot

./: .dockerignore  .gitignore  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  README.md
.circleci/: config.yml
.github/workflows/: cmake.yml  codeql-analysis.yml  docker-image.yml
cmake/: FindDPP.cmake
include/templatebot/: templatebot.h
src/: main.cpp
